--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
+<html>
+   <head>
+      <title>Lan's Portfolio Website</title>
+      <!-- Add stylesheets here later when made -->
+   </head>
 
-<head>
-   <title>Lan's Portfolio Website</title>
-   <!-- Add stylesheets here later when made -->
-</head>
-
-<body>
-   <header>
-      <!-- Creating navigation bar at top -->
-      <nav>
-         <ul>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Resume</a></li>
-         </ul>
-      </nav>
-   </header>
-   
-   <h1>Testing</h1>
-</body>
+   <body>
+      <header>
+         <!-- Creating navigation bar at top -->
+         <nav>
+            <ul>
+               <li><a href="#">About Me</a></li>
+               <li><a href="#">Resume</a></li>
+            </ul>
+         </nav>
+      </header>
+      
+      <h1>Testing</h1>
+   </body>
+</html>
